--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "@types/styled-components-react-native": "^5.1.3",
     "expo": "~45.0.0",
     "expo-splash-screen": "~0.15.1",
@@ -17,8 +21,12 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-reanimated": "~2.8.0",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "styled-components": "^5.3.5"
   },
@@ -26,6 +34,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@types/styled-components": "^5.1.25",
     "typescript": "~4.3.5"
   },
